# agh-mlops-lab-11

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.dev  compose.yml  pyproject.toml
.github/workflows/: ci_cd_workflow.yaml  hello_world.yaml
sa/: app.py
src/sa/: app.py  inference.py  settings.py
src/sa/api/models/: sa.py
src/scripts/: download_artifacts.py  export_classifier_to_onnx.py  export_sentence_transformer_to_onnx.py
tests/: test_app.py  test_inference.py
tests/api/models/: test_sa.py
