[project]
name = "hw"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.119.0",
    "httpx>=0.28.1"
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "ruff>=0.14.0",
    "torch>=2.8.0",
]

deployment = [
    "torch>=2.8.0",
    "sentence-transformers>=5.1.1",
    "skl2onnx>=1.19.1",
    "boto3>=1.42.10",
    "transformers>=4.57.3",
]

inference = [
    "boto3>=1.42.10",
    "onnxruntime>=1.23.2",
    "tokenizers>=0.22.1",
]
